# pore

./: .gitmodules  .pore.toml  Cargo.toml  README.md  pore.toml  versions.yaml
.circleci/: config.yml
.github/workflows/: ci.yml
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  getting_started.md  pore.md
src/: config.rs  depot.rs  main.rs  manifest.rs  pool.rs  repo_main_trampoline.py  tree.rs  update_check.rs  util.rs
src/hooks/: mod.rs
src/manifest/: mod.rs  parser.rs  serializer.rs
