[package]
name = "pore"
version = "0.1.16"
authors = ["Josh Gao <josh@jmgao.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "a performance oriented reimplementation of repo"
repository = "https://github.com/jmgao/pore"

[dependencies]
lazy_static = "1.4.0"

log = "0.4"
anyhow = "1.0"
futures = "0.3"
indoc = "1.0"

serde = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
toml = "0.5"

regex = "1"
serde_regex = "1"

# manifest::serialize::serializer passes a quick-xml value to minidom, so the quick-xml version
# must match the version needed by minidom.
quick-xml = "^0.17"
minidom = "=0.12.0"

clap = { version = "4.0.32", features = ["derive", "cargo"] }
maplit = "1.0.2"

chrono = "0.4.19"
dirs = "4.0.0"
shellexpand = "2.1.0"
pathdiff = "0.2.1"
url = "2.2.2"
walkdir = "2.3.2"
fs2 = "0.4.3"
filetime = "0.2.19"

git2 = { version = "0.18", features = ["vendored-libgit2"] }

atty = "0.2"
reqwest = { version = "0.11.9", features = ["blocking"] }
version-compare = "0.1.0"

console = "0.15.0"
num_cpus = "1.13.1"
progpool = "0.2"

tracing_facade = "0.1"
tracing_chromium = "0.1"

joinery = "3.0"
dashmap = "5.4.0"
