[package]
name = "pore"
version = "0.1.17"
authors = ["Josh Gao <josh@jmgao.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "a performance oriented reimplementation of repo"
repository = "https://github.com/jmgao/pore"

[dependencies]
anyhow = { version = "1.0", default-features = false }
indoc = { version = "1.0", default-features = false }
tracing = { version = "^0.1.40", default-features = false }

serde = { version = "1.0", default-features = false }
serde_yaml = { version = "0.8", default-features = false }
serde_derive = { version = "1.0", default-features = false }
toml = { version = "0.5", default-features = false }

regex = { version = "1", default-features = false }
serde_regex = { version = "1", default-features = false }

quick-xml = { version = "^0.37.0", default-features = false }

clap = { version = "4.0.32", default-features = true, features = ["derive"] }
maplit = { version = "1.0.2", default-features = false }

chrono = { version = "0.4.19", default-features = false, features = ["now"] }
dirs = { version = "4.0.0", default-features = false }
shellexpand = { version = "2.1.0", default-features = false }
pathdiff = { version = "0.2.1", default-features = false }
url = { version = "2.2.2", default-features = false }
walkdir = { version = "2.3.2", default-features = false }
fs4 = { version = "^0.9.1", default-features = false, features = ["sync"] }
filetime = { version = "0.2.19", default-features = false }

git2 = { version = "0.18", default-features = false, features = [
  "vendored-libgit2",
] }

version-compare = { version = "0.1.0", default-features = false }

console = { version = "0.15.0", default-features = false }
progpool = { version = "0.3.1", default-features = false }

tracing-chrome = { version = "^0.7.2", default-features = false }
tracing-subscriber = { version = "^0.3.18", default-features = false }

joinery = { version = "3.0", default-features = false }
dashmap = { version = "5.4.0", default-features = false }
