[package]
name = "pore"
version = "0.1.17"
authors = ["Josh Gao <josh@jmgao.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "a performance oriented reimplementation of repo"
repository = "https://github.com/jmgao/pore"

[dependencies]
anyhow = "1.0"
indoc = "2.0"
tracing = "^0.1.40"

serde = "1.0"
serde_yaml = "0.9"
serde_derive = "1.0"
toml = "0.8"

regex = "1"
serde_regex = "1"

quick-xml = "^0.37.5"

clap = { version = "4.5.38", features = ["derive", "cargo"] }
maplit = "1.0.2"

chrono = "0.4.41"
dirs = "6.0.0"
shellexpand = "3.1.1"
pathdiff = "0.2.1"
url = "2.2.2"
walkdir = "2.3.2"
fs4 = "^0.13.1"
filetime = "0.2.19"

git2 = { version = "0.20", features = ["vendored-libgit2"] }

reqwest = { version = "0.12.15", features = ["blocking"] }
version-compare = "0.2.0"

console = "0.15.11"
progpool = "0.3.2"

tracing-chrome = "^0.7.2"
tracing-subscriber = "^0.3.18"

joinery = "3.0"
dashmap = "6.1.0"

[lints.clippy]
unused_trait_names = "warn"

[lints.rust]
unused-extern-crates = "warn"
